Update internal metrics names (#227)
* metric concept update, use Measurement to replace the MetricSet which is ambiguous

* Fix name

* Update method name